spacing fixes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,11 @@
 .app-header {
+    width: 100vw !important;
 	background: linear-gradient(#505050, #191919);
 	color: white;
+}
+
+.main-content {
+    width: 100vw !important;
 }
 
 .header-title {
